--- a/css/styles.css
+++ b/css/styles.css
@@ -1,10 +1,17 @@
 /*
+
 * {
   border: 1px solid red;
 }
+
 */
 
-.blue {
-  color: blue;
+html,
+body,
+#map {
+  height: 100%;
 }
 
+.map-container {
+  height: 90%;
+}
