--- a/css/styles.css
+++ b/css/styles.css
@@ -24,7 +24,7 @@ body,
 }
 
 #info-img {
-  height: 300px;
+  height: 290px;
   max-width: 100%;
 }
 
@@ -46,5 +46,9 @@ body,
 
   .map {
     width: 100%;
+  }
+
+  .panel {
+    max-width: 290px;
   }
 }
