feat: add clearging the route

--- a/css/styles.css
+++ b/css/styles.css
@@ -48,6 +48,14 @@ body,
     width: 100%;
   }
 
+  .navbar {
+    margin: 0;
+  }
+
+  .map-container {
+    height: 98%;
+  }
+
   .panel {
     max-width: 290px;
   }
